[package]
name = "gbmu"
version = "0.1.0"
authors = [
  "Guilhem Smith <gsmith@student.42.fr>",
  "Florian Bennetot <fbenneto@student.42.fr>",
  "Tiago Lernould <tlernoul@student.42.fr>",
  "Cedric M'Passi <cedricmpassi@gmail.com>",
]
edition = "2021"
rust-version = "1.60.0"
description = "A gameboy emulator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bios"]
debug_render = ["gb-lcd/debug_render"]
registers_logs = ["gb-cpu/registers_logs"]
time_frame = []
time_stat_samples = []
debug_fps = ["time_stat_samples"]
cgb = [
  "gb-bus/cgb",
  "gb-ppu/cgb",
  "gb-cpu/cgb",
  "gb-dbg/cgb"
]
bios = []
save_state = [
  "gb-cpu/serialization",
  "gb-bus/serialization",
  "gb-timer/serialization",
  "gb-ppu/serialization",
  "gb-dma/serialization",
]

[dependencies]
winit = "0.26.1"
pixels = "0.9.0"
egui = "0.17"
winit_input_helper = "0.11.1"
native-dialog = "0.6"
log = { version = "0.4", features = ["std"] }
simplelog = "0.10"
serde_yaml = "0.8"
serde = "1.0.133"
rmp-serde = "1.0.0-beta.2"
clap = { version = "3.0.1", features = ["derive"] }
anyhow = "1.0"
gb-lcd = { path = "./gb-lcd" }
gb-ppu = { path = "./gb-ppu" }
gb-dbg = { path = "./gb-dbg" }
gb-joypad = { path = "./gb-joypad" }
gb-bus = { path = "./gb-bus" }
gb-cpu = { path = "./gb-cpu" }
gb-roms = { path = "./gb-roms" }
gb-clock = { path = "./gb-clock" }
gb-timer = { path = "./gb-timer" }
gb-dma = { path = "./gb-dma" }

[workspace]
members = [
  "gb-dma",
  "gb-clock",
  "gb-roms",
  "gb-ppu",
  "gb-lcd",
  "gb-cpu",
  "gb-dbg",
  "gb-bus",
  "gb-rtc",
  "gb-joypad",
  "gb-timer",
  "gb-test",
  "gb-breakpoint",
]

# Currently this patch doesn't work on macos
# I'll be using [paths override](https://doc.rust-lang.org/cargo/reference/overriding-dependencies.html#paths-overrides) for my setup
#
# [patch.crates-io]
# sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2", rev = "496368d72202b65d365ef64a86c293d20d22ece0" }
