[package]
name = "gb-bus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.4", features = ["small_rng"] }
log = "0.4"

[features]
trace_bus_full = ["trace_bus_write", "trace_bus_read"]
trace_bus_write = []
trace_bus_read = []
