[package]
name = "gb-cpu"
version = "0.1.0"
authors = ["firelight.flagboy <firelight.flagboy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gb-clock = { path = "../gb-clock" }
gb-bus = { path = "../gb-bus" }
gb-roms = { path = "../gb-roms" }
log = "0.4"
num_enum = "0.5"

[dev-dependencies]
cucumber = { git = "https://github.com/cucumber-rs/cucumber", version = "0.10" }
async-trait = "0.1"
futures = "0.3"

[[test]]
name = "bdd"
harness = false
