[package]
name = "gb-dbg"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_memory_editor = { git = "https://github.com/Ragarnoy/egui_memory_editor", rev = "6590a4737f7d9a9c774072fdb6a52bf4c694233f" }
egui = "0.14"
anyhow = "1.0.43"
log = "0.4"
nom = "7.1.0"
gb-roms = { path = "../gb-roms" }
gb-bus = { path = "../gb-bus" }

[dev-dependencies]
eframe = "0.14.0"
