[package]
name = "gb-dbg"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_memory_editor = { git = "https://github.com/Ragarnoy/egui_memory_editor", rev = "bbd226e9e5878d08e5a0221031a1c3e1cbff4bb4" }
egui = "0.15"
anyhow = "1.0.43"
log = "0.4"
nom = "7.1.0"
gb-roms = { path = "../gb-roms" }
gb-bus = { path = "../gb-bus" }

[dev-dependencies]
eframe = "0.15.0"

[features]
cgb = []
