[package]
name = "gb-dbg"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_memory_editor = { git = "https://github.com/FirelightFlagboy/egui_memory_editor", rev = "6a28daad74f11d93126baa4f377490a012399cf0" }
egui = "0.16"
anyhow = "1.0.43"
log = "0.4"
nom = "7.1.0"
gb-roms = { path = "../gb-roms" }
gb-bus = { path = "../gb-bus" }
gb-cpu = { path = "../gb-cpu" }

[dev-dependencies]
eframe = "0.16"

[features]
cgb = []
