[package]
name = "gb-joypad"
version = "0.0.0"
edition = "2021"

[dependencies]
sdl2 = { version = "0.35.0", features = ["bundled", "static-link"] }
egui = "0.16"
log = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
modular-bitfield = { version = "0.11" }
gb-bus = { path = "../gb-bus" }
gb-clock = { path = "../gb-clock" }

[features]
debug_state = []
toggle_joypad = []
