[package]
name = "gb-lcd-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.15.0"
epi = "0.15.0"
wgpu = "0.11.0"
winit = "0.25.0"
egui_demo_lib = "0.15.0"
egui_wgpu_backend = { git = "https://github.com/hasenbanck/egui_wgpu_backend" }
egui_winit_platform = { git = "https://github.com/hasenbanck/egui_winit_platform" }
chrono = "0.4.19"
pollster = "0.2.4"

