[package]
name = "gb-lcd-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
epi = "0.14.0"
wgpu = "0.11.0"
winit = "0.25.0"
egui_demo_lib = "0.14.0"
egui = "0.14"
egui_wgpu_backend = "0.13"
egui_winit_platform = { version = "0.10" }
winit_input_helper = "0.10"
pixels = "0.7.0"
chrono = "0.4.19"
pollster = "0.2.4"
log = "0.4"
env_logger = "0.9.0"
