[package]
name = "gb-lcd"
version = "0.1.0"
authors = ["Guilhem Smith <gsmith@student.42.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug_render = []

[dependencies]
egui = "0.16"
winit = "0.26.1"
winit_input_helper = "0.11.1"
pixels = "0.9.0"
