[package]
name = "gb-lcd"
version = "0.1.0"
authors = ["Guilhem Smith <gsmith@student.42.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug_render = []

[dependencies]
egui = "0.16"
egui_wgpu_backend = "0.16"
egui-winit = { version = "0.16", default-features = false }
winit = "0.26.1"
pixels = "0.9.0"
log = { version = "0.4", features = ["std"] }
