[package]
name = "gb-moc"
version = "0.1.0"
authors = ["Guilhem Smith <gsmith@student.42.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.34", features = ["bundled", "static-link"] }
egui = { version = "0.13" }
gl = { version = "0.14" }
nfd2 = {version = "0.3" }
egui_sdl2_gl = { version = "0.13" }