[package]
name = "gb-ppu"
version = "0.1.0"
authors = ["Guilhem Smith <gsmith@student.42.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gb-clock = { path = "../gb-clock" }
gb-lcd = { path = "../gb-lcd" }
gb-bus = { path = "../gb-bus" }
modular-bitfield = { version = "0.11" }
log = { version = "0.4" }

[dev-dependencies]
sdl2 = { version = "0.35", features = ["bundled", "static-link"] }
egui = "0.14"

[features]
cgb = ["gb-bus/cgb"]
