[package]
name = "gb-roms"
version = "0.1.0"
authors = ["firelight.flagboy <firelight.flagboy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
clap = { version = "3.0.0-beta.2" }

[build-dependencies]
zip = { version = "0.5" }

[dependencies]
modular-bitfield = "0.11.2"
gb-bus = { path = "../gb-bus" }
serde = { version = "1.0.130" , features = [ "derive" ] }
